<resources>
    <string name="app_name">Colcheius</string>
    <string name="app_slogan">O seu instrutor musical digital</string>
    <string name="text_login">Login</string>
    <string name="text_create_account">Não tem uma conta? Crie uma aqui!</string>
    <string name="text_email">Email</string>
    <string name="text_password">Senha</string>
    <string name="text_name">Nome</string>
    <string name="text_register">Registrar</string>
    <string name="text_creating_account">Criando sua conta…</string>
    <string name="text_singin_in">Conectando…</string>
    <string name="lessons">Lições</string>
    <string name="hello_user">Olá, %1$s!</string>
    <string name="ranking">Ranking</string>
    <string name="profile">Perfil</string>
    <string name="my_score">Minha Pontuação:</string>
    <string name="logout">Sair da minha conta</string>
    <string name="change_password">Alterar minha senha</string>
    <string name="text_correct_answer">Muito bem! Você acertou!</string>
    <string name="text_incorrect_answer">Ops! Você errou!</string>
    <string name="bt_continue">Continuar</string>
    <string name="bt_confirm">Confirmar</string>
    <string name="lesson_score_text">Pontuação da lição:</string>
    <string name="your_answer">Sua resposta: %1$s</string>
    <string name="correct_answer">Resposta correta: %1$s</string>
    <string name="need_try_again">Você precisa revisar novamente!</string>
    <string name="lets_go">Vamos lá!</string>
    <string name="congrats_go_to_next_module">Você está pronto para o próximo módulo</string>
    <string name="complete_previous_first">Complete a lição anterior primeiro</string>
    <!--Módulo 1-->
    <string name="m1_title_module_one_the_music">A Música</string>
    <string name="m1_text_explain_music">A música é uma forma de arte que se constitui em combinar sons e silêncios seguindo uma pré-organização ao longo do tempo. Podemos dizer que a música é a arte de se expressar através dos sons.</string>
    <string name="m1_text_explain_music2">Os elementos mais importantes da música são Melodia, Harmonia e Ritmo. Vamos começar nossos estudos falando sobre o Ritmo.</string>
    <string name="m1_title_module_one_rhythm">O Ritmo</string>
    <string name="m1_text_explain_rhythm">Sendo uma das primeiras manifestações musicais do homem, o ritmo é a divisão ordenada do tempo (que pode ser representada por batidas constantes), combinando sons curtos, longos e silêncios.</string>
    <string name="m1_text_explain_rhythm2">Algumas notas, por exemplo, representam 1 tempo (batida), outras somente meio tempo ou 4 tempos. Uma sequencia de três notas musicais pode dar origem a diversas composições diferentes apenas pela mudança do ritmo (ou andamento, que tem o mesmo significado na música).</string>
    <string name="m1_title_module_one_metronome">Metrônomo</string>
    <string name="m1_text_module_one_metronome">Um instrumento considerado \"o melhor amigo do músico\" é o metrônomo, que foi criado para medir o tempo e marcar o andamento de composições musicais. Podemos encontrar metrônomos tanto digitais (como em aplicativos) ou mecânicos.</string>
    <string name="m1_title_module_one_song_property">Propriedades do Som</string>
    <string name="m1_text_explain_song_property">Existem quatro principais propriedades do som, independentes entre si. Essas propriedades são: Timbre, Duração, Intensidade e Altura</string>
    <string name="m1_text_explain_song_property_timbre"><b>Timbre:</b> propriedade que nos permite reconhecer a origem do som, como por exemplo distinguir instrumentos diferentes ou vozes de pessoas diferentes</string>
    <string name="m1_text_explain_song_property_duracao"><b>Duração:</b> propriedade do som ser curto ou longo</string>
    <string name="m1_text_explain_song_property_intensidade"><b>Intensidade:</b> propriedade do som ser fraco ou forte, podendo ser exemplificado como o volume do som. Quanto maior o volume, mais forte o som e quanto menor, mais fraco</string>
    <string name="m1_text_explain_song_property_altura"><b>Altura:</b> propriedade do som ser grave, médio ou agudo. Por exemplo, se executarmos as teclas de um piano da esquerda para a direita, percebemos que o som começa grave e vai se tornando mais agudo conforme caminhamos pelas teclas do lado oposto</string>
    <!--Módulo 2-->
    <string name="m2_title_figuras">Figuras</string>
    <string name="m2_text_explain_figuras">As Figuras são símbolos utilizados para representar o tempo (duração do som) de uma nota musical. Cada figura tem seu nome, um número pelo qual é representada e sua respectiva figura de silêncio, assim como na imagem abaixo.\n<b>OBS: É IMPORTANTE MEMORIZAR AS INFORMAÇÕES DA TABELA, POIS SERÃO UTILIZADAS NOS PRÓXIMOS ESTUDOS.</b></string>
    <string name="m2_text_explain_figuras2">Como vimos na tabela anterior, podemos perceber que conforme avançamos (descendo a partir da Semibreve), as figuras valem a metade da anterior, assim como quando fazemos o contrário (subindo a partir da Semifusa) as figuras seguintes valem o dobro da anterior. Isso pode ser melhor representado da seguinte forma</string>
    <string name="m2_text_explain_figuras3">Podemos concluir que 2 Mínimas tem o mesmo valor que 1 Semibreve, 2 Semínimas tem o mesmo valor que 1 Mínima e assim por diante, também como 32 Fusas equivalem a 1 Semibreve.</string>
    <string name="m2_text_explain_figuras4">Algumas figuras podem aparecer ligadas por uma barra de união. Duas colcheias, uma ao lado da outra (esquerda) podem ser ligadas (direita).</string>
    <string name="m2_title_grave_agudo">Sons Graves e Agudos</string>
    <string name="m2_text_explain_grave_agudo">Altura do som é um termo utilizado para definir se um som é agudo ou grave. Sons altos são agudos e sons baixos são graves. O que faz um som ficar agudo ou grave é a frequência do som. Quanto maior a frequência, mais agudo (alto) é o som; e quanto menor a frequência, mais grave (baixo) é o som. Essa frequência corresponde aos ciclos (oscilações por segundo) da onda sonora.</string>
    <string name="m2_text_explain_grave_agudo2"> Como vimos no módulo anterior, se executarmos as teclas de um piano da esquerda para a direita, percebemos que o som começa grave e vai se tornando mais agudo conforme caminhamos pelas teclas até o lado oposto.</string>
    <string name="m2_text_explain_grave_agudo3">Obs: É importante não confundir altura do som com volume (ou intensidade) do som. A intensidade faz o som ser fraco ou forte, independente dele ser grave ou agudo.</string>
    <string name="m2_text_explain_figuras_important">Vale notar que a Semibreve é a figura de maior duração, enquanto a semifusa é a de menor duração</string>
    <!--Módulo3-->
    <string name="m3_title_Compasso">Compasso</string>
    <string name="m3_text_explain_compasso">Já sabemos que para determinar o ritmo e a duração das figuras, utilizamos o tempo como medida.
        \nO compasso é uma forma de agrupar tempos, que podem ser agrupados de 2 em 2 (compasso binário), de 3 em 3 (compasso ternário), de 4 em 4 (compasso quaternário), etc.
        \nEsses compassos podem ser simples ou compostos.</string>
    <string name="m3_title_barra_compasso">Barra de Compasso</string>
    <string name="m3_text_barra_compasso">Para representarmos os compassos na música utilizamos barras de compasso (também chamado de barra simples). O espaço entre duas barras de compasso é o que chamamos de compasso.</string>
    <string name="m3_text_barra_final">Para concluir (finalizar) uma partitura, utilizamos a barra final.</string>
    <string name="m3_text_barra_dupla">E para separar certos trechos da música (como separar verso de refrão) utilizamos a barra dupla.</string>
    <string name="m3_title_ritornello">Ritornello</string>
    <string name="m3_text_ritornello">O Ritornello serve para indicar uma repetição de certo trecho na música, ou seja, tudo o que estiver entre dois sinais de Ritornello deverá ser tocado novamente. Após repetir o trecho, continua-se tocando os compassos seguintes normalmente.</string>
</resources>