<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="@id/tv_slogan"
        app:layout_constraintStart_toStartOf="@id/tv_slogan"
        app:layout_constraintTop_toBottomOf="@id/tv_slogan" />

    <TextView
        android:id="@+id/tv_new_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/text_create_account"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        app:layout_constraintStart_toStartOf="@id/bt_login"
        app:layout_constraintEnd_toEndOf="@id/bt_login"
        android:layout_marginTop="36dp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>